app/assets/stylesheets/shared/general.scss
html,
body {
  background-color: $body_background_color;
  height: 100%;
  padding-top: 35px;
}

.page-wrap {
  // equal to footer height
  margin-bottom: -60px;
  min-height: 100%;
}

.page-wrap::after {
  content: "";
  display: block;
}

footer,
.page-wrap::after {
  height: 40px;
}

footer {
  background-color: $footer_background_color;
  margin-top: 20px;
  .list-inline { margin-bottom: 0; }

  a {
    color: $grey4;
    text-decoration: none;
  }

  li { padding: 2px; }
}

.shadow {
  // todo extract var
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 20px 0 rgba(0, 0, 0, 0.08);
}

.white-block {
  background-color: $white;
  border-radius: 2px;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 20px 0 rgba(0, 0, 0, 0.08);
  margin-bottom: 15px;
  padding: 2px;
}

.fa-envelope-o { color: $red; }
.fa-phone { color: $green; }
.fa-skype { color: $blue; }
.fa-comment { color: $footer_background_color; }
.fa-google-plus { color: $google; }
.fa-twitter { color: $blue; }
.fa-odnoklassniki { color: $orange; }

.my-q {
  background-color: $green;
  border-radius: 6px;
  color: $white;
  margin-left: 7px;
  padding: 0 3px;
}

.glyphicon-earphone {
  color: $green;
  font-size: 12px;
}

.secondary-navbar {
  box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.08);
  border-radius: 2px;

  li.active {
    a {
      background-color: $white !important;
      border-bottom: 2px solid $blue;
    }
  }
}

.partner {
  position: relative;

  .social-links {
    bottom: 0;
    left: 12%;
    padding: 5px 10px;
    position: absolute;
  }
}


.fb-comments,
.fb-comments iframe[style],
.fb-comments span {
  width: 100% !important;
}

.my-g-plus { width: 80px; }

.social-share {
  font-size: 1px;

  li {
    vertical-align: middle;
    margin-bottom: 5px;
  }
}

.prosmotrov {
  background-color: $white;
  border: 1px solid $lightgrey;
  border-radius: 2px;
  font-size: 13px;
  margin-left: 14px;
}

.btn-ez {
  font-family: 'calm';
  letter-spacing: 1px;
}

span.favorite { color: $orange; }
.white-hr { border-top: 1px solid $white; }
.search-modal-trigger { margin-bottom: 10px; }
.modal-content { border-radius: 0; }

.close {
  color: $orange;
  font-size: 30px;
  opacity: 1;
}

.form-control {
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.margin-bottom-10 {
  margin-bottom: 10px;
}

.panel {
  margin-bottom: 0;

  .panel-heading {
    background-color: $white;
    border: 0;

    a {
      color: $grey4;
      text-decoration: none;
    }
  }

  .panel-footer {
    background-color: $white;
  }
}

.tags {
  margin: 10px 0 0;
  overflow: hidden;

  .tag {
    background-color: $body_background_color;
    border-radius: 10px;
    color: $black;
    font-family: Georgia,Times,"Times New Roman",serif;
    padding: 1px 10px;
    margin: 2px;
  }

  a { text-decoration: none; }
}

.select2-container--default .select2-selection--multiple .select2-selection__choice {
  background-color: #f5f5f5;
}
.dropzone {
  min-height: 120px;
}

// bootstrap modal scroll fix
body.modal-open { position: fixed; }
// .modal-large {
//   position: absolute;
//   min-height: 500px;
// }


textarea { resize: vertical; }
.read-more {
  color: $blue;
}

.link {
  color: $grey4;
  text-decoration: none;
}

.devider {
  margin-top: 5px;
  margin-bottom: 5px;
}

.h1-side-block {
  font-size: 16px;
  margin: 0;
}

.h1-desc-title {
  font-size: 20px;
  margin-top: 0;
}

.h1-title {
  font-size: 20px;
}

.side-column {
  padding-left: 0;
  padding-right: 0;
}

.mobile-btn {
  background-color: transparent;
  border: 2px solid $blue;
  border-radius: 0;
  color: $blue;
  font-size: 12px;
  height: 30px;
  padding: 4px 12px;
}

.btn-vote {
  background-color: transparent;
  border: 1px solid $blue;
  border-radius: 5px;
  color: $blue;
  font-size: 12px;
  font-weight: 500;
  padding: 1px 6px;
}

#login_link {
  cursor: pointer;
}

#scrollUp {
}

#scrollUp {
  position: fixed;
  display: none;
  background-color: $blue;
  border-radius: 30px;
  color: #eee;
  font-size: 40px;
  line-height: 1;
  text-align: center;
  text-decoration: none;
  bottom: 20px;
  left: 20px;
  overflow: hidden;
  width: 46px;
  height: 46px;
  border: none;
  opacity: .8;
}

#scrollUp:hover{
  color: #eee;
  background-color: #222;
}

